--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,15 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
+    color: black
 }
 
-wwwolke: 
+wwwolke: {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-size: 3em;
+        color: blue
+
+}
 
 wwwolke:hover {
     color: white;
