--- a/css/main.css
+++ b/css/main.css
@@ -14,14 +14,14 @@ p {
     color: black
 }
 
-wwwolke: {
+.wwwolke: {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     font-size: 3em;
         color: blue
 
 }
 
-wwwolke:hover {
+.wwwolke:hover {
     color: white;
     text-transform: uppercase;
     letter-spacing: 1em;
