--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+
+h1:hover {
+       font-size: 4em;
+       background-color: blue;
+    }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
@@ -15,7 +20,7 @@ p {
 }
 
 .wwwolke: {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'', 'Arial', 'Sans-Serif';
     font-size: 3em;
         color: blue
 
