--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ p {
 
 .wolke { 
     font-size: 3em;
-        color: blue}
+        color: black}
 
 h2 {
     font-family:'', 'Arial', 'Sans-Serif';
